[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Art/Sprites/Pixel/House5.tres" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House8.tres" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House9.tres" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House2.tres" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House7.tres" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House4.tres" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House3.tres" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House1.tres" type="Texture" id=8]
[ext_resource path="res://Assets/Art/Sprites/Pixel/House6.tres" type="Texture" id=9]
[ext_resource path="res://Scripts/Building.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41, 46 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 51, 92 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "7",
"speed": 5.0
} ]

[node name="Building" type="KinematicBody2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
house_num = "1"

[node name="BaseCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="BuildingArea" type="Area2D" parent="."]

[node name="AreaShape" type="CollisionShape2D" parent="BuildingArea"]
shape = SubResource( 2 )

[node name="HouseSprite" type="AnimatedSprite" parent="."]
z_index = -3
frames = SubResource( 3 )
animation = "1"

[connection signal="area_entered" from="BuildingArea" to="." method="_on_BuildingArea_area_entered"]
[connection signal="area_exited" from="BuildingArea" to="." method="_on_BuildingArea_area_exited"]
